--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "plugin-example",
   "version": "1.0.0",
   "description": "",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Peter Keller",
   "license": "MIT"
 }
