--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "plugin-example",
   "version": "1.0.0",
   "description": "",
-  "private": true,
+  "private": false,
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
